--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@google/genai": "^1.41.0",
     "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
